[package]
name = "engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quadtree= { path = "../quadtree" }
winit = "0.26"
wgpu = "0.12.0"
image = "0.24.2"
bytemuck = { version = "1.9.1", features = ["derive"] }
